[package]
name = "generate_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.3.1"
uuid = { version =  "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
sha256 = "1.1.3"
base64 = "0.21.0"
chrono = "0.4.23"
